<resources>
    <string name="app_name">Week3 MusicPlayer</string>
    <string name="fragment_text">欢迎来到Fragment\n我是第一个Fragment</string>
    <string name="handler_text">arg1准备倒计时度咯</string>
    <string name="handler_text_obj">obj准备倒计时度咯</string>
    <string name="arg1over">Arg1倒计时结束</string>
    <string name="obj_over">Obj倒计时结束</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop SerVice</string>
    <string name="bind_service">Bind Service</string>
    <string name="unbind_service">UnBind Service</string>
    <string name="get_time">Get Music Time</string>
</resources>
